# Recruting.AC

./: BUILD_INSTRUCTIONS.md  CMakeLists.txt  QUICK_START.md  README.md  Tz Recrut ac.txt  build.bat
UI/: MainWindow.cpp  MainWindow.h
config/: config.json  hash_database.txt
forensic-scanner/: CMakeLists.txt  README.md  build.bat  build_mingw.bat  clean.bat  setup_imgui.bat
forensic-scanner/build-mingw/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
forensic-scanner/build-mingw/config/: keywords.txt  scan_paths.txt
forensic-scanner/config/: blacklist_sites.txt  discord_blacklist.txt  discord_servers.txt  hash_database.txt  keywords.txt  weights.txt
forensic-scanner/include/: BrowserScanner.h  Config.h  DiscordScanner.h  HashScanner.h  Logger.h  MainWindow.h  RiskCalculator.h
forensic-scanner/libs/imgui/: imgui.h  imgui_impl_dx11.h  imgui_impl_win32.h
forensic-scanner/src/: BrowserScanner.cpp  BrowserScanner.h  Config.cpp  Config.h  DiscordScanner.cpp  DiscordScanner.h  HashScanner.cpp  HashScanner.h  Logger.cpp  Logger.h  RiskCalculator.cpp  RiskCalculator.h  Types.h  Utils.cpp  Utils.h  main.cpp
forensic-scanner/src/UI/: MainWindow.cpp  MainWindow.h
release/config/: blacklist_sites.txt  hash_database.txt
src/: BrowserScanner.cpp  BrowserScanner.h  Config.cpp  Config.h  DiscordScanner.cpp  DiscordScanner.h  HashScanner.cpp  HashScanner.h  Logger.cpp  Logger.h  RiskCalculator.cpp  RiskCalculator.h  main.cpp
